# pico-dataset

./: README.md  create_dolma_dataset.py  create_dolma_dataset.sbatch  create_eval_batch.ipynb  create_idx_prepared_dataset.py  create_paloma_dataset.ipynb  create_prepared_dataset.sbatch  download_dolma.sh  finegrain_shard_dolma_dataset.ipynb  pyproject.toml  shard_dataset.ipynb
