[tool.poetry]
name = "pico-dataset"
version = "0.1.0"
description = "Dataset preparation tools for PICO"
authors = ["Richard Diehl Martinez<richarddiehl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^2.16.0"
huggingface-hub = "^0.20.0"
transformers = "^4.36.0"
click = "^8.1.0"
logging = "^0.4.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 