[tool.poetry]
name = "pico-dataset"
version = "0.1.0"
description = "Dataset preparation tools for PICO"
authors = ["Richard Diehl Martinez<richarddiehl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = {extras = ["cli"], version = "^0.25.1"}
datasets = "^3.2.0"
transformers = "^4.36.0"
click = "^8.1.0"
logging = "^0.4.9.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 